TDMS-1-CheckIn-Jul8

--- a/SalesCloudApp/main/default/classes/BotField.cls
+++ b/SalesCloudApp/main/default/classes/BotField.cls
@@ -1,4 +1,6 @@
 public class BotField {
+//Comment Change made now
+
 
     @AuraEnabled public String name { get;set; }
     @AuraEnabled public String value { get;set; }
@@ -9,6 +11,8 @@ public class BotField {
         this.value = value;
     }
     
+    
+    //New line
     public BotField(String name, String value, string linkURL) {
         this.name = name;
         this.value = value;
